// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SARIF reporter integration -- global-diagnostics (file-less TS2318) > matches the committed redacted snapshot (cross-OS/Node byte-stability) 1`] = `
{
  "$schema": "http://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "artifacts": [],
      "results": [
        {
          "level": "error",
          "message": {
            "text": "Cannot find global type 'Array'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "3f6e0babea27415df47bb1b39eb67e9185795658213b5c596ce663d5ea9f02a6",
          },
          "ruleId": "TS2318",
        },
        {
          "level": "error",
          "message": {
            "text": "Cannot find global type 'Boolean'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "012969762692971a085794d36785aa39346e6350f789df98ccae1e3acf2cc41d",
          },
          "ruleId": "TS2318",
        },
        {
          "level": "error",
          "message": {
            "text": "Cannot find global type 'CallableFunction'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "236a8977fe6fb69c84f93651a64f75d53350be9e6b4731e4e8964224e9eded56",
          },
          "ruleId": "TS2318",
        },
        {
          "level": "error",
          "message": {
            "text": "Cannot find global type 'Function'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "8d5655dce69b2a9c1f8b74b4b91525e29763b7699c26a972778cf4e82be1c36b",
          },
          "ruleId": "TS2318",
        },
        {
          "level": "error",
          "message": {
            "text": "Cannot find global type 'IArguments'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "8a3441c038adf52241db2dcc00f7c29445c3b6209c348484a710ef0b78ea43a8",
          },
          "ruleId": "TS2318",
        },
        {
          "level": "error",
          "message": {
            "text": "Cannot find global type 'NewableFunction'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "8a93806ecf17fd9d54c8765ce5ec3e704e5e0fc51cff4051534161d294bb33e7",
          },
          "ruleId": "TS2318",
        },
        {
          "level": "error",
          "message": {
            "text": "Cannot find global type 'Number'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "7aff3009683a2b70a22e8f553a07f787baa0ab6078b1df8844686be552c48b0f",
          },
          "ruleId": "TS2318",
        },
        {
          "level": "error",
          "message": {
            "text": "Cannot find global type 'Object'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "9a29001bedcc88f1b66e506cdd80df11895ce539610095906f8e127016ff643e",
          },
          "ruleId": "TS2318",
        },
        {
          "level": "error",
          "message": {
            "text": "Cannot find global type 'RegExp'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "97b9cfaa5ed508509cbff372bc580fed46a46ec5432c401d1df251b8f5dac8c3",
          },
          "ruleId": "TS2318",
        },
        {
          "level": "error",
          "message": {
            "text": "Cannot find global type 'String'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "da8ff753a241bdeb3e9f10a492bf2812bef7f45fe5352c32519d6493aae15d35",
          },
          "ruleId": "TS2318",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/LayZeeDK/angular-typechecker",
          "name": "angular-typechecker",
          "rules": [
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8101",
              "id": "NG8101",
              "shortDescription": {
                "text": "Inverted banana-in-a-box binding: use [(...)] rather than ([...])",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8102",
              "id": "NG8102",
              "shortDescription": {
                "text": "Nullish coalescing (??) applied to a value that is not nullable",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8107",
              "id": "NG8107",
              "shortDescription": {
                "text": "Optional chaining (?.) applied to a value that is not nullable",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8103",
              "id": "NG8103",
              "shortDescription": {
                "text": "A control-flow directive is used without importing the directive that defines it",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8116",
              "id": "NG8116",
              "shortDescription": {
                "text": "Unknown structural directive (a required import is missing)",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8104",
              "id": "NG8104",
              "shortDescription": {
                "text": "A static text attribute where a property binding was likely intended",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8111",
              "id": "NG8111",
              "shortDescription": {
                "text": "A function is referenced but not invoked in an event binding",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8105",
              "id": "NG8105",
              "shortDescription": {
                "text": "ngFor is used without the let keyword",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8106",
              "id": "NG8106",
              "shortDescription": {
                "text": "The unit suffix is not supported on this binding",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8108",
              "id": "NG8108",
              "shortDescription": {
                "text": "ngSkipHydration is bound dynamically instead of as a static attribute",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8109",
              "id": "NG8109",
              "shortDescription": {
                "text": "A signal read in a template interpolation is not invoked",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8011",
              "id": "NG8011",
              "shortDescription": {
                "text": "Control flow prevents an element from being content-projected",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8112",
              "id": "NG8112",
              "shortDescription": {
                "text": "An @let declaration in the template is never used",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8115",
              "id": "NG8115",
              "shortDescription": {
                "text": "A track function is referenced but not invoked in a control-flow block",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8113",
              "id": "NG8113",
              "shortDescription": {
                "text": "A standalone component declares imports it never uses",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8114",
              "id": "NG8114",
              "shortDescription": {
                "text": "Nullish coalescing mixed with || or && without parentheses",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8117",
              "id": "NG8117",
              "shortDescription": {
                "text": "A function is referenced but not invoked in a text interpolation",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8021",
              "id": "NG8021",
              "shortDescription": {
                "text": "A @defer block trigger is misconfigured",
              },
            },
          ],
          "version": "[version]",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;

exports[`SARIF reporter integration -- layout-b-host (mixed TS2322 + NG8002) > matches the committed redacted snapshot (cross-OS/Node artifactLocation.uri proof) 1`] = `
{
  "$schema": "http://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "artifacts": [
        {
          "location": {
            "uri": "fixtures/layout-b-aggregated/card.component.html",
          },
          "sourceLanguage": "HTML",
        },
        {
          "location": {
            "uri": "fixtures/layout-b-aggregated/card.stories.ts",
          },
          "sourceLanguage": "TypeScript",
        },
      ],
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "index": 0,
                  "uri": "fixtures/layout-b-aggregated/card.component.html",
                },
                "region": {
                  "endColumn": 31,
                  "endLine": 1,
                  "startColumn": 6,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "Can't bind to 'nonExistentProp' since it isn't a known property of 'div'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "e20d71fa31526019abfc3417c83f508c7a63cdd1d3b475532cc1f8c760d03ced",
          },
          "ruleId": "NG8002",
        },
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "index": 1,
                  "uri": "fixtures/layout-b-aggregated/card.stories.ts",
                },
                "region": {
                  "endColumn": 8,
                  "endLine": 17,
                  "startColumn": 3,
                  "startLine": 17,
                },
              },
            },
          ],
          "message": {
            "text": "Type 'string' is not assignable to type 'number'.",
          },
          "partialFingerprints": {
            "atcFingerprint/v1": "abb11752df760db295a32fe88bd730ee25a17d6d5621b23d675d656f16b17b7b",
          },
          "ruleId": "TS2322",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/LayZeeDK/angular-typechecker",
          "name": "angular-typechecker",
          "rules": [
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8101",
              "id": "NG8101",
              "shortDescription": {
                "text": "Inverted banana-in-a-box binding: use [(...)] rather than ([...])",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8102",
              "id": "NG8102",
              "shortDescription": {
                "text": "Nullish coalescing (??) applied to a value that is not nullable",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8107",
              "id": "NG8107",
              "shortDescription": {
                "text": "Optional chaining (?.) applied to a value that is not nullable",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8103",
              "id": "NG8103",
              "shortDescription": {
                "text": "A control-flow directive is used without importing the directive that defines it",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8116",
              "id": "NG8116",
              "shortDescription": {
                "text": "Unknown structural directive (a required import is missing)",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8104",
              "id": "NG8104",
              "shortDescription": {
                "text": "A static text attribute where a property binding was likely intended",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8111",
              "id": "NG8111",
              "shortDescription": {
                "text": "A function is referenced but not invoked in an event binding",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8105",
              "id": "NG8105",
              "shortDescription": {
                "text": "ngFor is used without the let keyword",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8106",
              "id": "NG8106",
              "shortDescription": {
                "text": "The unit suffix is not supported on this binding",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8108",
              "id": "NG8108",
              "shortDescription": {
                "text": "ngSkipHydration is bound dynamically instead of as a static attribute",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8109",
              "id": "NG8109",
              "shortDescription": {
                "text": "A signal read in a template interpolation is not invoked",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8011",
              "id": "NG8011",
              "shortDescription": {
                "text": "Control flow prevents an element from being content-projected",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8112",
              "id": "NG8112",
              "shortDescription": {
                "text": "An @let declaration in the template is never used",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8115",
              "id": "NG8115",
              "shortDescription": {
                "text": "A track function is referenced but not invoked in a control-flow block",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8113",
              "id": "NG8113",
              "shortDescription": {
                "text": "A standalone component declares imports it never uses",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8114",
              "id": "NG8114",
              "shortDescription": {
                "text": "Nullish coalescing mixed with || or && without parentheses",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8117",
              "id": "NG8117",
              "shortDescription": {
                "text": "A function is referenced but not invoked in a text interpolation",
              },
            },
            {
              "helpUri": "https://angular.dev/extended-diagnostics/NG8021",
              "id": "NG8021",
              "shortDescription": {
                "text": "A @defer block trigger is misconfigured",
              },
            },
          ],
          "version": "[version]",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;
